# UltraPlot

./: .coverage  .gitignore  .gitignore.rej  .pre-commit-config.yaml  .readthedocs.yml  .rules  .zenodo.json  AGENTS.md  CITATION.cff  INSTALL.rst  KIWI_LAYOUT_README.md  README.rst  ULTRALAYOUT_README.md  codecov.yml  environment.yml  example_kiwi_layout.py  example_ultralayout.py  noxfile.py  pyproject.toml  requirements-minimal.txt  test.py  test_kiwi_layout_demo.py  test_simple.py  test_ultralayout_demo.py
.github/: dependabot.yml
.github/workflows/: README-docs-cache.md  act.yml  build-ultraplot.yml  complexity.yml  docs-cache.yml  main.yml  publish-pypi.yml  test-map.yml  validate-versions.yml
.mplconfig/: fontlist-v390.json
docs/: 1dplots.py  2dplots.py  CACHING.md  INTEGRATION_GUIDE.md  Makefile  api.rst  basics.py  build_docs.sh  build_docs_cached.sh  cache_docs.py  colorbars_legends.py  conf.py  configuration.rst  contributing.rst  fonts.py  index.rst  insets_panels.py  lazy_loading.rst  make.bat  projections.py  requirements-rtd.txt  sg_execution_times.rst  simple_test.py  stats.py  subplots.py  thread_safety_example.py  usage.rst  whats_new.rst  why.rst
docs/.doc_cache/: file_hashes.json
docs/_scripts/: fetch_releases.py
docs/_static/: custom.css  custom.js
docs/_templates/: gallery_sidebar.html  whatsnew_sidebar.html
docs/examples/: README.txt
docs/sphinxext/: custom_roles.py  jupytext_cache.py
site/: README.md  astro.config.mjs  package.json
tools/ci/: build_test_map.py  complexity_report.py  select_tests.py  version_support.py
tools/docs/: generate_astro_api.py
tools/release/: publish_zenodo.py  sync_citation.py
ultraplot/: __init__.py  _lazy.py  _subplots.py  colorbar.py  colors.py  config.py  constructor.py  demos.py  figure.py  gridspec.py  kiwi_layout.py  legend.py  proj.py  scale.py  text.py  textalign.py  ticker.py  ui.py  ultralayout.py  utils.py
ultraplot/axes/: __init__.py  _formatting.py  astro.py  base.py  cartesian.py  container.py  geo.py  plot.py  plot.py.rej  polar.py  shared.py  taylor.py  three.py
ultraplot/internals/: __init__.py  benchmarks.py  context.py  docstring.py  figure_factory.py  figure_formatting.py  figure_guides.py  figure_labels.py  figure_layout.py  figure_options.py  figure_panels.py  figure_sharing.py  fonts.py  guides.py  inputs.py  kwargs.py  labels.py  projections.py  rcsetup.py  rcsetup.py.rej  versions.py  warnings.py
ultraplot/tests/: conftest.py  test_1dplots.py  test_2dplots.py  test_animation.py  test_astro_axes.py  test_axes.py  test_axes_alt_styles.py  test_base.py  (+48 more)
(+99 files in other folders)
