[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ultraplot"
authors = [
    {name = "Casper van Elteren", email = "caspervanelteren@gmail.com"},
    {name = "Luke Davis", email = "lukelbd@gmail.com"},
]
maintainers = [
    {name = "Casper van Elteren", email = "caspervanelteren@gmail.com"},
    {name = "Matthew R. Becker", email = "becker.mr@gmail.com"},
]
description = "A succinct matplotlib wrapper for making beautiful, publication-quality graphics."
readme = "README.rst"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Matplotlib",
]
dependencies= [
    "numpy>=1.26.0",
    "matplotlib>=3.9,<3.11",
    "pycirclize>=1.10.1",
    "typing-extensions; python_version < '3.12'",
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://ultraplot.readthedocs.io"
"Issue Tracker" = "https://github.com/ultraplot/ultraplot/issues"
"Source Code" = "https://github.com/ultraplot/ultraplot"

[tool.setuptools]
packages = {find = {exclude=["docs*", "baseline*", "logo*"]}}
include-package-data = true

[tool.setuptools_scm]
write_to = "ultraplot/_version.py"
write_to_template = "__version__ = '{version}'\n"


[tool.ruff]
ignore = ["I001", "I002", "I003", "I004"]

[tool.basedpyright]
exclude = ["**/*.ipynb"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'resetCache' deprecated - use 'reset_cache':DeprecationWarning:matplotlib._fontconfig_pattern",
]
mpl-default-style = { axes.prop_cycle = "cycler('color', ['#4c72b0ff', '#55a868ff', '#c44e52ff', '#8172b2ff', '#ccb974ff', '#64b5cdff'])" }
[project.optional-dependencies]
docs = [
    "jupyter",
    "jupytext",
    "lxml-html-clean",
    "m2r2",
    "mpltern",
    "nbsphinx",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-automodapi",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-gallery",
    "shibuya",
    "sphinx-rtd-light-dark @ git+https://github.com/ultraplot/UltraTheme.git",
    "sphinx-sitemap",
    "typing-extensions"
]
